--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="col-md-4">
-                                <img src="images/fruits-image.jpg" alt="Fruits image"/>                    
+                                <img src="images/resource.jpg" alt="Fruits image"/>                    
                             </div>
                             <div class="col-md-8">
                                 <div class="row">
