--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
          <div class="container-fluid">
             <div class="col-md-12">
                <div class="row">
-                  <div class="col-md-4">
+                  <div class="col-md-4 fruits-img">
                      <img src="images/fruits-image.JPG" alt="Fruits image"/>                    
                   </div>
                   <div class="col-md-8">
