--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                            <div class="panel-body">
                               <div class="col-sm-12 col-md-12">
                                  <p>Here's the process for using this resource in your classroom</p>
-                                 <div class="accordiontwo clean">
+                                 <div class="accordion clean">
                                     <div class="ac-item ac-active border-bottom">
                                        <h5 class="ac-title col-two"><span class="number">1</span> Engage Students </h5>
                                        <div class="ac-content">
