--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
       <link href="css/custom.css" rel="stylesheet">
    </head>
    <body>
+      <div id="topbar" class=" topbar-fullwidth dark d-none d-xl-block d-lg-block">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <ul class="top-menu">
+                         
+                        </ul>
+                    </div>
+                    <div class="col-md-6 d-none d-sm-block">
+                        <div class="social-icons social-icons-colored-hover">
+                         <ul>
+                            <li>
+                              <a href="#" id="small">A</a>                                
+                           </li>
+                           <li>
+                              <a href="#" id="medium" class="selected">A</a>                                
+                           </li>
+                           <li>
+                              <a href="#" id="large">A</a>
+                           </li>                  
+                        </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
       <header id="header" class="header-no-sticky">
          <div id="header-wrap">
             <div class="container-fluid">
@@ -24,7 +50,7 @@
                   <img src="images/SmarterBalanced_logo.png" alt="Smarter Balanced logo" class="img-responsive main-logo">
                   </a>
                </div>
-               <!--End: Logo-->
+               <!--End: Logo-->                
                <!--Navigation Resposnive Trigger-->
                <div id="mainMenu-trigger">
                   <button class="lines-button x"> <span class="lines"></span> </button>
@@ -444,6 +470,9 @@
                         <h5>Share your trip</h5>
                         <p>Share how you used this resource. How did it go? How did you adapt it for your students? What should other teachers know as they use it in their classrooms?</p>
                         <textarea class="textarea t-box" cols="20" placeholder="Tell us what you think!"></textarea>
+                        <div class="text-left">
+                           <button class="btn btn-submit " aria-label="Submit">Submit</button>
+                        </div>
                      </div>
                      <div class="col-md-6">
                         <h2>Related Resource</h2>
