--- a/index.html
+++ b/index.html
@@ -8,37 +8,18 @@
       <!-- Stylesheets & Fonts -->      
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
          crossorigin="anonymous">
+         <link rel="stylesheet" type="text/css" media="all" href="css/atbar.css">
       <link rel="stylesheet" type="text/css" href="css/fonts/Montserrat.ttf">
-      <link href="css/plugins.css" rel="stylesheet">
-      <link href="css/style.css" rel="stylesheet">
-      <link href="css/responsive.css" rel="stylesheet">
-      <link href="css/custom.css" rel="stylesheet">
+      <link  href="css/plugins.css" rel="stylesheet" type="text/css">
+      <link  href="css/style.css" rel="stylesheet" type="text/css">
+      <link  href="css/responsive.css" rel="stylesheet" type="text/css">
+      <link  href="css/custom.css" rel="stylesheet" type="text/css">
    </head>
    <body>
       <div id="topbar" class=" topbar-fullwidth dark d-none d-xl-block d-lg-block">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <ul class="top-menu">
-                         
-                        </ul>
-                    </div>
-                    <div class="col-md-6 d-none d-sm-block">
-                        <div class="social-icons social-icons-colored-hover">
-                         <ul>
-                            <li>
-                              <a href="#" id="small">A</a>                                
-                           </li>
-                           <li>
-                              <a href="#" id="medium" class="selected">A</a>                                
-                           </li>
-                           <li>
-                              <a href="#" id="large">A</a>
-                           </li>                  
-                        </ul>
-                        </div>
-                    </div>
-                </div>
+
+                <div><a href="javascript:(function(){d=document;jf=d.createElement('script');jf.src=('https:'==document.location.protocol?'https://ssl.atbar.org/c':'http://c.atbar.org')+'/ATBar2/ATBar.min.user.js';jf.type='text/javascript';jf.id='ToolBar';d.getElementsByTagName('head')[0].appendChild(jf);})();" id="toolbar-launch" title="Launch Accessbility to adjust this webpage, have it read aloud and other functions."><img src="images/accessibility.png" alt="ATbar">Accessibility</a></div>
             </div>
         </div>
       <header id="header" class="header-no-sticky">
