--- a/index.html
+++ b/index.html
@@ -739,6 +739,8 @@
       <script src="js/custom.js"></script>     
       <script type="text/javascript">
 
+<script type="text/javascript">
+
 var _userway_config = {
 
 /* uncomment the following line to override default position*/
