--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
    <link  href="css/custom.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
    <header id="header" class="header-no-sticky">
       <div id="header-wrap">
          <div class="container-fluid">
@@ -90,18 +89,18 @@
                      </div>
                      <div class="col-md-6 ">
                         <div class="row ">
-                           <div class="share-ico col-md-6 col-sm-6 col-xs-6 d-sm-none d-md-block">
+                           <div class="share-ico col-md-6 col-sm-4 col-xs-6 d-sm-none d-md-block">
                               &nbsp;
                            </div>
-                           <div class="share-ico col-md-2 col-sm-6 col-xs-6 text-center">
+                           <div class="share-ico col-md-2 col-sm-4 col-xs-6 text-center">
                               <a href="#"><i class="fas fa-share-square"></i>
                               Share</a>
                            </div>
-                           <div class="share-ico col-md-2 col-sm-6 col-xs-6 text-center p-0">
+                           <div class="share-ico col-md-2 col-sm-4 col-xs-6 text-center p-0">
                               <a href="#"><i class="fas fa-download"></i>
                               Download</a>
                            </div>
-                           <div class="share-ico col-md-2 col-sm-6 col-xs-6 text-center p-0">
+                           <div class="share-ico col-md-2 col-sm-4 col-xs-6 text-center p-0">
                               <a href="#"><i class="far fa-heart"></i>
                               Favorite</a>
                            </div>
@@ -138,13 +137,13 @@
                         <div class="col-md-5 col-sm-12">
                            <h4>Resource Rating  <span class="ratings"> <i>20 Ratings</i></span></h4>
                            <div class="row">
-                              <div class="col-md-4 col-sm-4 text-left xs-xcol">
+                              <div class="col-md-4 col-sm-4 text-left  percol">
                                  <p class="smile"><span><i class="far fa-smile"></i> </span> 80%</p>
                               </div>
-                              <div class="col-md-4 col-sm-4 text-center xs-xcol">
+                              <div class="col-md-4 col-sm-4 text-center  percol">
                                  <p class="meh"><span><i class="far fa-meh"></i></span> 10%</p>
                               </div>
-                              <div class="col-md-4 col-sm-4 text-right xs-xcol">
+                              <div class="col-md-4 col-sm-4 text-right  percol">
                                  <p class="frown"><span><i class="far fa-frown"></i> </span> 10%</p>
                               </div>
                               <div class="col-sm-12 col-md-12 text-right">
@@ -236,7 +235,7 @@
                   </div>
                   <div class="greenicons p-15 p-r-0 p-l-0 m-t-15">
                      <div class="row">
-                        <div class="col-md-3 text-center xs-28">
+                        <div class="col-md-3 text-center xs-28 ">
                            <a href="#"  data-target="#mynotes" data-toggle="modal"><i class="fas fa-edit m-l-10"></i>
                            My Notes</a>
                         </div>
@@ -427,19 +426,19 @@
                   <p class="m-b-25">Here’s how other educators used this resource. </p>
                   <h5 class="gradeimage"><span><img src="images/user-image.png" alt="Grade 6 math teacher in Washington image"></span>Grade 6 math teacher in Washington</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ullamcorper lacinia gravida. Donec luctus lacus sed nisi ultrices, in cursus eros consequat. Nunc suscipit viverra lacinia. Nullam aliquam quam a nisl consequat, ac tincidunt magna malesuada. Donec tristique, metus at euismod lacinia, libero risus porttitor lorem, sit amet consectetur est nisi euismod mauris.</p>
-                  <div class="row">
+                  <div class="row submit-bar">
                      <p class="gradebottom col-sm-12 col-md-6 text-left"><i>Submitted September 6, 2018</i></p>
                      <p class="gradebottom col-md-6 col-sm-12 text-right">Helpful <span class="m-l-15"><i class="fas fa-thumbs-down"></i></span> 10% <span class="m-l-15"><i class="fas fa-thumbs-up down"></i></span> 90%</p>
                   </div>
-                  <div class="linetwo m-20"></div>
+                  <div class="linetwo m-t-20 m-b-20"></div>
                   <h5 class="gradeimage"><span><img src="images/user-image.png" alt="Grade 6 math teacher in Washington
                      image"></span>Grade 6 math teacher in Washington</h5>
                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ullamcorper lacinia gravida. Donec luctus lacus sed nisi ultrices, in cursus eros consequat. Nunc suscipit viverra lacinia. Nullam aliquam quam a nisl consequat, ac tincidunt magna malesuada. Donec tristique, metus at euismod lacinia, libero risus porttitor lorem, sit amet consectetur est nisi euismod mauris.</p>
-                     <div class="row">
+                     <div class="row submit-bar">
                         <p class="gradebottom col-sm-12 col-md-6 text-left"><i>Submitted September 6, 2018</i></p>
                         <p class="gradebottom col-md-6 col-sm-12 text-right">Helpful <span class="m-l-15"><i class="fas fa-thumbs-down"></i></span> 10% <span class="m-l-15"><i class="fas fa-thumbs-up down"></i></span> 90%</p>
                      </div>
-                     <div class="linetwo m-20"></div>
+                     <div class="linetwo m-t-20 m-b-20"></div>
                      <p class="text-right"><i>3 tips are waiting for approval</i></p>
                      <h5>Share your trip</h5>
                      <p>Share how you used this resource. How did it go? How did you adapt it for your students? What should other teachers know as they use it in their classrooms?</p>
@@ -452,24 +451,24 @@
                      <h2>Related Resource</h2>
                      <div class="leftimg-box">
                         <div class="row border m-b-60">
-                           <div class="col-md-4 col-sm-6 p-l-0">
-                              <img src="images/leaves.png" alt="Resource title image">
+                           <div class="col-md-3 col-lg-4 col-sm-6 p-l-0">
+                              <img src="images/leaves.png" alt="Resource title image" class="img-responsive">
                            </div>
-                           <div class="col-md-8 p-l-0">
+                           <div class="col-md-9 col-lg-8 p-l-0">
                               <div class="resourceside">
                                  <h5 class="m-b-5">RESOURCE TITLE</h5>
                                  <div class="row">
-                                    <div class="col-md-3 p-r-0 col-sm-6">
+                                    <div class="col-md-4 col-lg-4 p-r-0 col-sm-6">
                                        <div class="math-grade m-t-10">
                                           <span class="mathematics-span">Math</span>
                                           <span class="grade-span">G6</span>
                                        </div>
                                     </div>
-                                    <div class="col-md-5 p-0">
+                                    <div class="col-md-4 col-lg-4 p-0 clam-content">
                                        <p><b>CLAM</b></p>
                                        <p>2: Problem Solving</p>
                                     </div>
-                                    <div class="col-md-4 p-0">
+                                    <div class="col-md-4 col-lg-4 p-0 clam-content">
                                        <p><b>TARGET</b></p>
                                        <p>B: Number System</p>
                                     </div>
@@ -482,24 +481,24 @@
                            </div>
                         </div>
                         <div class="row border m-b-60">
-                           <div class="col-md-4 col-sm-6 p-l-0">
-                              <img src="images/leaves.png" alt="Resource title image">
+                           <div class="col-md-3 col-lg-4 col-sm-6 p-l-0 ">
+                              <img src="images/leaves.png" alt="Resource title image" class="img-responsive">
                            </div>
-                           <div class="col-md-8 p-l-0">
-                              <div class="resourceside">
+                           <div class="col-md-9 col-lg-8 p-l-0 ">
+                              <div class="resourceside ">
                                  <h5 class="m-b-5">RESOURCE TITLE</h5>
                                  <div class="row">
-                                    <div class="col-md-3 p-r-0 col-sm-6">
+                                    <div class="col-lg-4 col-md-4 p-r-0 col-sm-6">
                                        <div class="math-grade m-t-10">
                                           <span class="mathematics-span">Math</span>
                                           <span class="grade-span">G6</span>
                                        </div>
                                     </div>
-                                    <div class="col-md-5 p-0">
+                                    <div class="col-lg-4 col-md-4 p-0 clam-content">
                                        <p><b>CLAM</b></p>
                                        <p>2: Problem Solving</p>
                                     </div>
-                                    <div class="col-md-4 p-0">
+                                    <div class="col-lg-4 col-md-4 p-0 clam-content">
                                        <p><b>TARGET</b></p>
                                        <p>B: Number System</p>
                                     </div>
@@ -512,24 +511,24 @@
                            </div>
                         </div>
                         <div class="row border m-b-60">
-                           <div class="col-md-4 col-sm-6 p-l-0">
-                              <img src="images/leaves.png" alt="Resource title image">
+                           <div class="col-md-3 col-lg-4 col-sm-6 p-l-0">
+                              <img src="images/leaves.png" alt="Resource title image" class="img-responsive">
                            </div>
-                           <div class="col-md-8 p-l-0">
+                           <div class="col-md-9 col-lg-8 p-l-0">
                               <div class="resourceside">
                                  <h5 class="m-b-5">RESOURCE TITLE</h5>
                                  <div class="row">
-                                    <div class="col-md-3 p-r-0 col-sm-6">
+                                    <div class="col-lg-4 col-md-4 p-r-0 col-sm-6">
                                        <div class="math-grade m-t-10">
                                           <span class="mathematics-span">Math</span>
                                           <span class="grade-span">G6</span>
                                        </div>
                                     </div>
-                                    <div class="col-md-5 p-0">
+                                    <div class="col-lg-4 col-md-4 p-0 clam-content">
                                        <p><b>CLAM</b></p>
                                        <p>2: Problem Solving</p>
                                     </div>
-                                    <div class="col-md-4 p-0">
+                                    <div class="col-lg-4 col-md-4 p-0 clam-content">
                                        <p><b>TARGET</b></p>
                                        <p>B: Number System</p>
                                     </div>
