--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <link  href="css/custom.css" rel="stylesheet" type="text/css">
    </head>
    <body>
-      
+
       <header id="header" class="header-no-sticky">
          <div id="header-wrap">
             <div class="container-fluid">
@@ -86,9 +86,9 @@
                               <span class="grade-span">Grade 6</span>
                            </div>
                         </div>
-                        <div class="col-md-6 ">
-                           <div class="row ">
-                              <div class="share-ico col-md-2 col-sm-2 col-xs-6 d-sm-none d-md-block">
+                        <div class="col-md-6 col align-self-center">
+                           <div class="row">
+                              <div class="share-ico empty col-md-2 col-sm-2 col-xs-6  d-md-block">
                                  &nbsp;
                               </div>
                               <div class="share-ico col-md-2 col-sm-4 col-xs-6 text-center">
