--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="col-md-12">
                <div class="row">
                   <div class="col-md-4 fruits-img">
-                     <img src="images/fruits-image.JPG"  longdesc="#" alt="" longdesc="#"/>                    
+                     <img src="images/fruits-image.JPG"  longdesc="#" alt=""/>                    
                   </div>
                   <div class="col-md-8">
                      <div class="row">
@@ -110,7 +110,7 @@
                         <h3>Connecting fraction division equations to visual Models</h3>
                         <div class="row ">
                            <div class="col-md-4 col-sm-6">
-                              <em class="class="m-b-10"">Contributrd by: Diana Prince</em>
+                              <em class="m-b-10">Contributrd by: Diana Prince</em>
                            </div>
                            <div class="col-md-4 col-sm-6">
                               <em>Updated: 1/25/19</em>
@@ -263,8 +263,7 @@
                                  </h5>
                               </div>
                               <p class="col-md-12">In this task, Students will engage with divison of fraction tasks that use the same context but require students to divide the fractions in the opposite order. Students solve the tasks by creating visual models, selecting the equations and comparing back to the visual modela. Students will work to answer the question, "how do these numbers and operation work together?"<a href="#waterMindDistrictMeteres" class="moreText" data-toggle="collapse" data-parent="#accordion" data-target="#waterMindDistrictMeteres"> more...</a></p>
-                              <div class="line m-t-10 m-b-10"></div>
-                              <!-- <p  class="moreText" data-toggle="collapse" data-parent="#accordion" data-target="#waterMindDistrictMeteres">more</p> -->
+                              <div class="line m-t-10 m-b-10"></div>                              
                               <div id="waterMindDistrictMeteres" class="panel-collapse collapse">
                                  <div class="panel-body">
                                     <div class="col-md-12 col-sm-12">
@@ -730,7 +729,7 @@
       <script src="js/plugins.js"></script>      
       <script src="js/functions.js"></script>
       <script src="js/custom.js"></script>     
-      <script type="text/javascript">
+      
          <script type="text/javascript">
          
          var _userway_config = {
