--- a/index.html
+++ b/index.html
@@ -763,6 +763,6 @@
          };
          
       </script>
-      <script type="text/javascript" src="https://cdn.userway.org/widget.js"></script>
+      <script src="https://cdn.userway.org/widget.js"></script>
    </body>
 </html>
