--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <!-- Document title -->
-   <title>Tool Teachers</title>
+   <title>Connecting Fraction Division Equations</title>
    <!-- Stylesheets & Fonts -->      
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
    crossorigin="anonymous">
@@ -15,13 +15,13 @@
 </head>
 <body>
 
-   <header id="header" class="header-no-sticky">
+   <header id="header" class="header-no-sticky" dir="ltr">
       <div id="header-wrap">
          <div class="container-fluid">
             <!--Logo-->
             <div id="logo">
-               <a href="index.html" class="logo">
-                  <img src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html">
+               <a href="https://kastech-india.github.io/SBAC/index.html" class="logo">
+                  <img src="images/Smarter   Balanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html">
                </a>
             </div>
             <!--End: Logo-->                
