--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-   <header id="header" class="header-no-sticky" dir="ltr">
+   <header id="header" class="header-no-sticky" >
       <div id="header-wrap">
          <div class="container-fluid">
             <!--Logo-->
@@ -546,9 +546,9 @@
                </div>
             </div>
          </div>
-      </section>
-      <footer>
-         <div class="footerbottom p-t-50 p-b-50">
+   </section>
+   <footer>
+      <div class="footerbottom p-t-50 p-b-50">
             <div class="container">
                <div class="row">
                   <div class="col-md-6 text-left">
@@ -565,9 +565,9 @@
                </div>
             </div>
          </div>
-      </footer>
+   </footer>
       <!-- mynotes -->
-      <div class="modal fade" id="mynotes" tabindex="-1"  aria-labelledby="modal-label-1" aria-hidden="true">
+   <div class="modal fade" id="mynotes" tabindex="-1"  aria-labelledby="modal-label-1" aria-hidden="true">
          <div class="modal-dialog modal-lg">
             <div class="modal-content modalmainbox">
                <div class="modal-header modalcontent ">
@@ -607,11 +607,11 @@
                </div>
             </div>
          </div>
-      </div>
+   </div>
       <!-- mynotes -->
       <!-- modal start -->
       <!-- instructional -->
-      <div class="modal fade" id="instructional" tabindex="-1"  aria-labelledby="modal-label-2" aria-hidden="true">
+   <div class="modal fade" id="instructional" tabindex="-1"  aria-labelledby="modal-label-2" aria-hidden="true">
          <div class="modal-dialog modal-lg">
             <div class="modal-content modalmainbox">
                <div class="modal-header modalcontent ">
@@ -638,10 +638,10 @@
                </div>
             </div>
          </div>
-      </div>
+   </div>
       <!-- instructional -->
       <!-- formative -->
-      <div class="modal fade" id="formative" tabindex="-1"  aria-labelledby="modal-label-3" aria-hidden="true">
+   <div class="modal fade" id="formative" tabindex="-1"  aria-labelledby="modal-label-3" aria-hidden="true">
          <div class="modal-dialog modal-lg">
             <div class="modal-content modalmainbox">
                <div class="modal-header modalcontent border-bottom">
@@ -687,10 +687,10 @@
                </div>
             </div>
          </div>
-      </div>
+   </div>
       <!-- formative -->
       <!-- accessibility -->
-      <div class="modal fade" id="accessibility" tabindex="-1"  aria-labelledby="modal-label-4" aria-hidden="true">
+   <div class="modal fade" id="accessibility" tabindex="-1"  aria-labelledby="modal-label-4" aria-hidden="true">
          <div class="modal-dialog modal-lg">
             <div class="modal-content modalmainbox">
                <div class="modal-header modalcontent border-bottom">
@@ -722,15 +722,15 @@
                </div>
             </div>
          </div>
-      </div>
+   </div>
       <!-- accessibility -->
       <!-- modal end -->
-      <script src="js/jquery.js"></script>
-      <script src="js/plugins.js"></script>      
-      <script src="js/functions.js"></script>
-      <script src="js/custom.js"></script>
-      <script src="https://cdn.userway.org/widget.js"></script>      
-      <script>
+   <script src="js/jquery.js"></script>
+   <script src="js/plugins.js"></script>      
+   <script src="js/functions.js"></script>
+   <script src="js/custom.js"></script>
+   <script src="https://cdn.userway.org/widget.js"></script>      
+   <script>
 
          var _userway_config = {
 
@@ -762,7 +762,6 @@
 
          };
          
-      </script>
-      
-   </body>
-   </html>
+   </script>
+</body>
+</html>
