--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!--Logo-->
             <div id="logo">
                <a href="https://kastech-india.github.io/SBAC/index.html" class="logo">
-                  <img src="images/Smarter   Balanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html">
+                  <img src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html">
                </a>
             </div>
             <!--End: Logo-->                
