--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
                               &nbsp;
                            </div>
                            <div class="share-ico col-md-2 col-sm-4 col-xs-6 text-center">
-                              <a href="#"><i class="fas fa-share-square"></i>
+                              <a href="#"><em aria-hidden="true" class="fas fa-share-square" title="Share"></em>
                               Share</a>
                            </div>
                            <div class="share-ico col-md-2 col-sm-4 col-xs-6 text-center p-0">
-                              <a href="#"><i class="fas fa-download"></i>
+                              <a href="#"><strong aria-hidden="true" class="fas fa-download" title="Download"></strong>
                               Download</a>
                            </div>
                            <div class="share-ico col-md-2 col-sm-4 col-xs-6 text-center p-0">
-                              <a href="#"><i class="far fa-heart"></i>
+                              <a href="#"><i aria-hidden="true" class="far fa-heart" title="Favorite"></i>
                               Favorite</a>
                            </div>
                         </div>
@@ -118,32 +118,32 @@
                      </div>
                      <div class="row">
                         <div class="col-md-4 col-sm-6">
-                           <h4>Clam <span><i class="fas fa-info-circle"></i></span></h4>
+                           <h4>Clam <span><i aria-hidden="true" class="fas fa-info-circle" title="Problem Solving"></i></span></h4>
                            <p class="clam-p">2: Problem Solving</p>
                         </div>
                         <div class="col-md-4 col-sm-6">
-                           <h4>Target <span><i class="fas fa-info-circle"></i></span></h4>
+                           <h4>Target <span><i aria-hidden="true" class="fas fa-info-circle" title="The number System"></i></span></h4>
                            <p class="clam-p">B: The Number System</p>
                         </div>
                         <div class="col-md-4 col-sm-6">
-                           <h4>Connections playlist <span><i class="fas fa-info-circle"></i></span></h4>
+                           <h4>Connections playlist <span><i aria-hidden="true" class="fas fa-info-circle" title="Grade 6 Fractions"></i></span></h4>
                            <p class="clam-p">Grade 6 Fractions</p>
                         </div>
                         <div class="col-md-7 col-sm-12">
-                           <h4>Learning Goal <span><i class="fas fa-info-circle"></i></span></h4>
+                           <h4>Learning Goal <span><i aria-hidden="true" class="fas fa-info-circle" title="Learning Goal"></i></span></h4>
                            <p class="morelink">The student can solve real-word and mathemetical one-<br> step problems involving division of <a href="#">MORE...</a></p>
                         </div>
                         <div class="col-md-5 col-sm-12">
                            <h4>Resource Rating  <span class="ratings"> <em>20 Ratings</em></span></h4>
                            <div class="row">
                               <div class="col-md-4 col-sm-4 text-left  percol">
-                                 <p class="smile"><span><i class="far fa-smile"></i> </span> 80%</p>
+                                 <p class="smile"><span><i aria-hidden="true" class="far fa-smile" title="80 percentage"></i> </span> 80%</p>
                               </div>
                               <div class="col-md-4 col-sm-4 text-center  percol">
-                                 <p class="meh"><span><i class="far fa-meh"></i></span> 10%</p>
+                                 <p class="meh"><span><i aria-hidden="true" class="far fa-meh" title="10 percentage"></i></span> 10%</p>
                               </div>
                               <div class="col-md-4 col-sm-4 text-right  percol">
-                                 <p class="frown"><span><i class="far fa-frown"></i> </span> 10%</p>
+                                 <p class="frown"><span><i aria-hidden="true" class="far fa-frown" title="10 percentage"></i> </span> 10%</p>
                               </div>
                               <div class="col-sm-12 col-md-12 text-right">
                                  <a href="#" class="rate"> Rate this resource</a>
@@ -210,23 +210,23 @@
                      <div class="optionicons">
                         <div class="row">
                            <div class="col-md-2 offset-md-1 col-sm-2 offset-sm-1 boxbtm-ico text-center xs-xcol">                         
-                              <a href="#"><i class="fas fa-share-square"></i>
+                              <a href="#"><i aria-hidden="true" class="fas fa-share-square" title="Share"></i>
                               Share</a>                                        
                            </div>
                            <div class="col-md-2  col-sm-2 boxbtm-ico text-center p-0 xs-xcol">                          
-                              <a href="#"><i class="fas fa-download"></i>
+                              <a href="#"><i aria-hidden="true" class="fas fa-download" title="Download"></i>
                               Download</a>                                        
                            </div>
                            <div class="col-md-2  col-sm-2 boxbtm-ico text-center p-0 xs-xcol">                          
-                              <a href="#"><i class="far fa-heart"></i>
+                              <a href="#"><i aria-hidden="true" class="far fa-heart" title="Favorite"></i>
                               Favorite</a>                                        
                            </div>
                            <div class="col-md-2  col-sm-2 boxbtm-ico text-center xs-xcol">                          
-                              <a href="#"><i class="fas fa-comment"></i>
+                              <a href="#"><i aria-hidden="true" class="fas fa-comment" title="Tips"></i>
                               Tips</a>                                        
                            </div>
                            <div class="col-md-2  col-sm-2 boxbtm-ico text-center xs-xcol">                          
-                              <a href="#"><i class="fas fa-pager"></i>
+                              <a href="#"><i aria-hidden="true" class="fas fa-pager" title="Related"></i>
                               Related</a>                                        
                            </div>
                         </div>
@@ -235,15 +235,15 @@
                   <div class="greenicons p-15 p-r-0 p-l-0 m-t-15">
                      <div class="row">
                         <div class="col-md-3 text-center xs-28 ">
-                           <a href="#"  data-target="#mynotes" data-toggle="modal"><i class="fas fa-edit m-l-10"></i>
+                           <a href="#"  data-target="#mynotes" data-toggle="modal"><i aria-hidden="true" class="fas fa-edit m-l-10" title="My Notes"></i>
                            My Notes</a>
                         </div>
                         <div class="col-md-3 text-center xs-28">
-                           <a href="#"  data-target="#instructional" data-toggle="modal"><i class="fas fa-laptop"></i>
+                           <a href="#"  data-target="#instructional" data-toggle="modal"><i aria-hidden="true" class="fas fa-laptop" title="Instructional Materials"></i>
                            Instructional Materials</a> 
                         </div>
                         <div class="col-md-3 text-center xs-28">
-                           <a href="#"  data-target="#formative" data-toggle="modal"><i class="fas fa-dice-four"></i>
+                           <a href="#"  data-target="#formative" data-toggle="modal"><i aria-hidden="true" class="fas fa-dice-four" title="Formative Strategies"></i>
                            Formative Strategies</a> 
                         </div>
                         <div class="col-md-3 text-center xs-28">
@@ -267,19 +267,19 @@
                            <div id="waterMindDistrictMeteres" class="panel-collapse collapse">
                               <div class="panel-body">
                                  <div class="col-md-12 col-sm-12">
-                                    <h5 class="panelsubhead"><span ><i class="far fa-file-alt"></i> </span> Instructional Meterials</h5>
-                                    <a href="#" class="tasklink">Illusrative Mathematics Task: How Many Containers in One Cup/ Cups in One Container? <span><i class="fas fa-external-link-square-alt"></i></span></a>
+                                    <h5 class="panelsubhead"><span ><i aria-hidden="true" class="far fa-file-alt" title="Instructional Meterials"></i> </span> Instructional Meterials</h5>
+                                    <a href="#" class="tasklink">Illusrative Mathematics Task: How Many Containers in One Cup/ Cups in One Container? <span><i aria-hidden="true" class="fas fa-external-link-square-alt" title=" go to Illusrative Mathematics Task: How Many Containers in One Cup/ Cups in One Container"></i></span></a>
                                     <p>Students will need to br given a copy of the illustrative Mathematics task. This cloud be a paper copy for each student, or the task could be projected via use of a Smartboard, or document camera. The task could also the delivered to students electronically via google or another online platform. </p>
-                                    <h5 class="panelsubhead"><span ><i class="fas fa-random"></i></span> How can i difference this resource based on student performance? <span> <i class="fas fa-info-circle"></i></span></h5>
+                                    <h5 class="panelsubhead"><span ><i aria-hidden="true" class="fas fa-random" title="how can i difference this resource based on student performance "></i></span> How can i difference this resource based on student performance? <span> <i aria-hidden="true" class="fas fa-info-circle" title="information"></i></span></h5>
                                     <p>If your students are <strong> below:</strong> modify the numbers in the problems to include a whole number divided by a fraction. This may provide access to students who are still making sense of fraction division</p>
                                     <p>If your students are <strong>above:</strong> Change one of the numbers to a mixed number to extend student understanding about division of frsction with fractions greater thean one.</p>
-                                    <h5 class="panelsubhead"><span><i class="fas fa-check-square"></i> </span> How will i measure student success? <span> <i class="fas fa-info-circle"></i></span></h5>
+                                    <h5 class="panelsubhead"><span><i aria-hidden="true" class="fas fa-check-square" title="How will i measure student success"></i> </span> How will i measure student success? <span> <i aria-hidden="true" class="fas fa-info-circle" title="information"></i></span></h5>
                                     <ul class="m-l-20">
                                        <li>Students will be able to construct visual models to solve contextual problems involvinf division of fractions.</li>
                                        <li>Students will be able to pair visual fraction models with appropriate equations.</li>
                                        <li>Students will be able to compare the quotients of fractions.</li>
                                     </ul>
-                                    <h5 class="panelsubhead"><span ><i class="fas fa-link"></i></span> Related Standards <span> <i class="fas fa-info-circle"></i></span></h5>
+                                    <h5 class="panelsubhead"><span ><i aria-hidden="true" class="fas fa-link" title="Related Standards"></i></span> Related Standards <span> <i class="fas fa-info-circle"></i></span></h5>
                                     <div class="row m-l-10">
                                        <p class="clam-p m-r-20">6.NS.A.1</p>
                                        <p class="clam-p m-r-20">6.NS.A.1</p>
@@ -306,7 +306,7 @@
                                              <h5 class="ac-title col-two"><span class="number">1</span> Engage Students </h5>
                                              <div class="ac-content">
                                                 <p>Initiate the task by engaging students in the topic and clarifying intended learning. this task utilizes an approach called a <span rel="tooltip" data-toggle="tooltip" class="tooltip-custm" data-placement="bottom" title="Formative Assessement Strategy :Conceptual Bridge  This is one approach for clarifying intended learning with your students. Learn more.">
-                                                   <i class="fas fa-dice-four"></i></span> <strong>Conceptual Bridge</strong>.
+                                                   <i aria-hidden="true" class="fas fa-dice-four" title="Conceptual Bridge"></i></span> <strong>Conceptual Bridge</strong>.
                                                 </p>
                                                 <p>Ask students a simple division problem that you know they’ll be successful at – what is four divided by two? Ask a few students to share how they did the problem. They will likely say that they tried to ﬁgure out how many times three goes into six. Next ask them – what is two divided by ½? They will likely grapple through the task of ﬁguring out how many times ½ goes into four. Ask them to explain why four makes sense. Then ask them – what is ½ divided by two – and ask a few students to share how they solved the problem and why. Then ask them – what is 2/3 divided by 1/2? Explain that is the type of problem they will be working to solve.</p>
                                              </div>
@@ -317,7 +317,7 @@
                                                 <p>Ask Students to create a visual representation of the following scenario:1/2 cup of water fills 2/3 of a container</p>
                                                 <p>Whiteboard or scratch paper may be useful for this task.</p>
                                                 <p>As Students are working <span rel="tooltip" data-toggle="tooltip" class="tooltip-custm" data-placement="bottom" title="Formative Assessement Strategy : Circulate the Room   This is one approach for  Eliciting evidence of understanding from your students. Learn more.">
-                                                   <i class="fas fa-dice-four"></i></span> <strong>Circulate the Room </strong> to observe students working.As you circulate the room, pay attention to the following look-fors and take action to help move students forward as needed.
+                                                   <i aria-hidden="true" class="fas fa-dice-four" title="Circulate the room"></i></span> <strong>Circulate the Room </strong> to observe students working.As you circulate the room, pay attention to the following look-fors and take action to help move students forward as needed.
                                                 </p>
                                                 <ul class="m-l-15">
                                                    <li>Not consirdering the scale of their drawings. Help them by explaining that it will help them to solve the problem if they consider the size of their representations.</li>
@@ -325,7 +325,7 @@
                                                 </ul>
                                                 <div class="row m-b-5">
                                                    <div class="col-md-5">
-                                                      <p>Students will create a visual model independently. You can pair them together to share their visual representations and explain their reasoning. Facilitate students providing <span><i class="fas fa-dice-four"></i></span><strong>Peer-to-Peer Feedback.</strong>. Consider providing <span><i class="fas fa-dice-four"></i></span><strong>Sentence Frames</strong> to support actionable student feedback. The students may adjust their models as their thinking and reasoning changes through discussion.</p>
+                                                      <p>Students will create a visual model independently. You can pair them together to share their visual representations and explain their reasoning. Facilitate students providing <span><i aria-hidden="true" class="fas fa-dice-four" title="Peer-to-Peer"></i></span><strong>Peer-to-Peer Feedback.</strong>. Consider providing <span><i aria-hidden="true" class="fas fa-dice-four" title="Sentence Frames"></i></span><strong>Sentence Frames</strong> to support actionable student feedback. The students may adjust their models as their thinking and reasoning changes through discussion.</p>
                                                    </div>
                                                    <div class="col-md-7">
                                                       <div class="border bg-lightgrey p-10">
