--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <!--Logo-->
             <div id="logo">
                <a href="https://kastech-india.github.io/SBAC/index.html" class="logo">
-                  <img src="https://kastech-india.github.io/SBAC/images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html">
-               </a>
+                  <image src="https://kastech-india.github.io/SBAC/images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html">
+               </image>
+                     </a>
             </div>
             <!--End: Logo-->                
             <!--Navigation Resposnive Trigger-->
